Opened 11 years ago

Closed 10 years ago

#5174 closed defect (fixed)

ficv: "invalid cursor size" warning

Reported by: ami_stuff Owned by:
Priority: minor Component: avcodec
Version: git-master Keywords: fic
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

http://www.datafilehost.com/d/54ae604d

see also ticket #4072

C:\>ffmpeg -i fic1.avi out.avi
ffmpeg version N-77816-g9ca64c3 Copyright (c) 2000-2016 the FFmpeg developers
  built with gcc 5.2.0 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --
enable-libdcadec --enable-libfreetype --enable-libgme --enable-libgsm --enable-l
ibilbc --enable-libmodplug --enable-libmp3lame --enable-libopencore-amrnb --enab
le-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-librtmp --en
able-libschroedinger --enable-libsoxr --enable-libspeex --enable-libtheora --ena
ble-libtwolame --enable-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc
 --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enabl
e-libx264 --enable-libx265 --enable-libxavs --enable-libxvid --enable-libzimg --
enable-lzma --enable-decklink --enable-zlib
  libavutil      55. 13.100 / 55. 13.100
  libavcodec     57. 22.100 / 57. 22.100
  libavformat    57. 21.101 / 57. 21.101
  libavdevice    57.  0.100 / 57.  0.100
  libavfilter     6. 23.100 /  6. 23.100
  libswscale      4.  0.100 /  4.  0.100
  libswresample   2.  0.101 /  2.  0.101
  libpostproc    54.  0.100 / 54.  0.100
Input #0, avi, from 'fic1.avi':
  Metadata:
    encoder         : Lavf57.21.101
  Duration: 00:00:05.00, start: 0.000000, bitrate: 17650 kb/s
    Stream #0:0: Video: fic (FICV / 0x56434946), yuv420p, 1280x720, 17689 kb/s,
60 fps, 60 tbr, 60 tbn, 60 tbc
File 'out.avi' already exists. Overwrite ? [y/N] y
Output #0, avi, to 'out.avi':
  Metadata:
    ISFT            : Lavf57.21.101
    Stream #0:0: Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 1280x720, q=2-31, 20
0 kb/s, 60 fps, 60 tbn, 60 tbc
    Metadata:
      encoder         : Lavc57.22.100 mpeg4
    Side data:
      unknown side data type 10 (24 bytes)
Stream mapping:
  Stream #0:0 -> #0:0 (fic (native) -> mpeg4 (native))
Press [q] to stop, [?] for help
[fic @ 0385f220] Invalid cursor size. Skipping cursor.
    Last message repeated 121 times
frame=  122 fps=0.0 q=31.0 size=     386kB time=00:00:02.03 bitrate=1556.7kbits/
[fic @ 0385f220] Invalid cursor size. Skipping cursor.
    Last message repeated 124 times
frame=  247 fps=0.0 q=31.0 size=     659kB time=00:00:04.11 bitrate=1311.9kbits/
[fic @ 0385f220] Invalid cursor size. Skipping cursor.
    Last message repeated 49 times
frame=  300 fps=240 q=31.0 Lsize=     868kB time=00:00:05.00 bitrate=1422.3kbits
/s speed=   4x
video:855kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing o
verhead: 1.488257%

Change History (4)

comment:1 by ami_stuff, 10 years ago

Here are the samples which I created myself "Invalid cursor size. Skipping cursor.":

http://www.datafilehost.com/d/5e79b153

in reply to:  1 comment:2 by ami_stuff, 10 years ago

Replying to ami_stuff:

Here are the samples which I created myself "Invalid cursor size. Skipping cursor.":

http://www.datafilehost.com/d/5e79b153

"Invalid cursor position", not size.

comment:3 by Carl Eugen Hoyos, 10 years ago

Component: undeterminedavcodec
Keywords: fic added
Priority: normalminor
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Patch finally sent...

comment:4 by Carl Eugen Hoyos, 10 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.