lavc/fic: Do not warn about empty cursor.

Fixes ticket #5174.